--- a/css/styles.css
+++ b/css/styles.css
@@ -2,31 +2,54 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
+  font-size: 150%;
 }
 
 h1 {
-  margin-top: 0;
-  font-family: Sacramento, cursive;
-}
-h2 {
-  font-family: Montserrat, sans-serif;
-}
-h3 {
-  font-family: 'Montserrat', serif;
+  color: #66BFBF;
+  font-size: 5.625rem;
+  margin-top: 50px auto 0 auto;
+  font-family: 'Sacramento', cursive;
+  font-weight: normal;
 }
 
+h2 {
+  color: #66BFBF;
+  font-size: 2.5rem;
+  font-family: Montserrat, sans-serif;
+}
+
+h3 {
+  color: #11999E;
+  font-family: 'Montserrat', serif;
+}
+.web-developer{
+  color: #66BFBF;
+}
+.fro{
+  color: #66BFBF;
+  font-weight: normal;
+}
 .top-container {
   background-color: #AEFEFF;
   position: relative;
   padding-top: 100px
 }
-
-.middle-container {
-
+.mountains {
+  position: relative;
+  margin-left: 650px;
 }
 
-.bottom-container {
+.middle-container {}
 
+.bottom-container {
+  background-color: #66BFBF;
+}
+.skill-row{
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
 }
 
 .fro {
@@ -37,7 +60,7 @@ h3 {
   position: absolute;
   height: 160px;
   width: 160px;
-  right: 300px;
+  right: 280px;
   top: 50px;
 }
 
@@ -45,20 +68,29 @@ h3 {
   position: absolute;
   height: 160px;
   width: 160px;
-  left: 300px;
+  left: 280px;
   bottom: 300px;
 }
-.Ososeh{
+
+.Ososeh-img {
   border-radius: 100%;
   height: 200px;
   width: 200px;
 
 }
-.trophy{
-  height: 300px;
-  width: 350px;
+
+.trophy-img {
+width: 25%;
+float: left;
+margin-right: 30px;
+}
+.l {
 
 }
-.skill-row{
-
+.programming-img{
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+.gamer{
 }
