--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   text-align: center;
   font-family: 'Merriweather', serif;
   font-size: 150%;
+  color: #40514E;
 }
 
 h1 {
@@ -17,39 +18,84 @@ h2 {
   color: #66BFBF;
   font-size: 2.5rem;
   font-family: Montserrat, sans-serif;
+  padding-bottom: 10px;
 }
 
 h3 {
   color: #11999E;
   font-family: 'Montserrat', serif;
 }
-.web-developer{
+
+p {
+  line-height: 2;
+}
+
+hr {
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 3%;
+  margin: 100px auto;
+}
+
+a {
+  color: #11999E;
+  font-family: Montserrat, sans-serif;
+  margin: 10px 30px;
+  text-decoration: none;
+}
+a:hover{
+  color: #EAF6F6;
+}
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+.copyright{
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+
+.web-developer {
   color: #66BFBF;
 }
-.fro{
+
+.fro {
   color: #66BFBF;
   font-weight: normal;
 }
+
 .top-container {
-  background-color: #AEFEFF;
+  background-color: #FFD36E;
   position: relative;
   padding-top: 100px
 }
+
 .mountains {
   position: relative;
   margin-left: 650px;
+
 }
 
-.middle-container {}
+.middle-container {
+  padding: 100px 0;
+  background-color: #FDF6EC;
+}
+
+.intro {
+  width: 30%;
+  margin: auto;
+}
 
 .bottom-container {
   background-color: #66BFBF;
+  padding: 50px 0 20px;
 }
-.skill-row{
+
+.skill-row {
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
-  line-height: 2;
 }
 
 .fro {
@@ -61,14 +107,14 @@ h3 {
   height: 160px;
   width: 160px;
   right: 280px;
-  top: 50px;
+  top: 40px;
 }
 
 .bottom-cloud {
   position: absolute;
   height: 160px;
   width: 160px;
-  left: 280px;
+  left: 250px;
   bottom: 300px;
 }
 
@@ -76,21 +122,49 @@ h3 {
   border-radius: 100%;
   height: 200px;
   width: 200px;
-
 }
 
 .trophy-img {
-width: 25%;
-float: left;
-margin-right: 30px;
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+  border-radius: 100%;
 }
-.l {
 
-}
-.programming-img{
+.l {}
+
+.programming-img {
   width: 25%;
   float: right;
   margin-left: 30px;
 }
-.gamer{
+
+.gamer {}
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Tahoma, sans-serif;
+  color: #ffffff;
+  font-size: 23px;
+  padding: 10px 20px 10px 20px;
+  border: solid #1f628d 0px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
 }
